<resources>
    <string name="app_name">QL chi tiêu</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="title_add_order">Add Order</string>
    <string name="cost">Cost</string>
    <string name="huy">Huy</string>
    <string name="duong">Duong</string>
    <string name="khiem">Khiem</string>
    <string name="khanh">Khanh</string>
    <string name="agent">Agent</string>
    <string name="partner">Partner</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="about_msg">This application is created by HD</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="week_spinner" translatable="false">Week Spinner</string>
    <string name="change_lang">Change language</string>

    <string-array name="agent_arrays">
        <item>Huy</item>
        <item>Dương</item>
        <item>Khiêm</item>
        <item>Khánh</item>
    </string-array>

    <string-array name="weeks">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
        <item>Week 7</item>
        <item>Week 8</item>
        <item>Week 9</item>
        <item>Week 10</item>
        <item>Week 11</item>
        <item>Week 12</item>
        <item>Week 13</item>
        <item>Week 14</item>
        <item>Week 15</item>
        <item>Week 16</item>
        <item>Week 17</item>
        <item>Week 18</item>
        <item>Week 19</item>
        <item>Week 20</item>
        <item>Week 21</item>
        <item>Week 22</item>
        <item>Week 23</item>
        <item>Week 24</item>
        <item>Week 25</item>
        <item>Week 26</item>
        <item>Week 27</item>
        <item>Week 28</item>
        <item>Week 29</item>
        <item>Week 30</item>
        <item>Week 31</item>
        <item>Week 32</item>
        <item>Week 33</item>
        <item>Week 34</item>
        <item>Week 35</item>
        <item>Week 36</item>
        <item>Week 37</item>
        <item>Week 38</item>
        <item>Week 39</item>
        <item>Week 40</item>
        <item>Week 41</item>
        <item>Week 42</item>
        <item>Week 43</item>
        <item>Week 44</item>
        <item>Week 45</item>
        <item>Week 46</item>
        <item>Week 47</item>
        <item>Week 48</item>
        <item>Week 49</item>
        <item>Week 50</item>
        <item>Week 51</item>
        <item>Week 52</item>
    </string-array>
    <string name="choose_agent">Choose agent</string>
    <string name="rtt_name">Cash Manager</string>
    <string name="rtt_convenient">Convenient</string>
    <string name="rtt_fast">Fast</string>
    <string name="rtt_effective">Effective</string>
    <string name="rtt_ahihi" translatable="false">¯\\_(ツ)_/¯</string>
    <string name="developed_by_duong_han">Developed by Duong Han © 2018</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="add_person">Add person</string>
    <string name="remove_person">Remove person</string>
    <string name="member">Member</string>
    <string name="name">Name</string>
    <string name="validation_empty">Empty input text</string>
    <string name="add_member">Add Member</string>
    <string name="txt_version">1.0.0</string>
    <string name="txt_author">Duong Han</string>
    <string name="txt_copyright_symbol">©</string>
    <string name="txt_about_share_title">Share via</string>
    <string name="txt_title_header_bbm">Black Berry Messener</string>
    <string name="txt_bbm_qr_pin">PIN: 2BFE6A3A</string>
    <string name="delete_confirm_member">Are you sure to deleete this person?</string>
    <string name="delete_member_title">Delete member</string>
</resources>
