<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/spinner_week"
        android:title="@string/week_spinner"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_language"
        android:title="@string/language"
        android:icon="@drawable/ic_language"/>

    <item
        android:id="@+id/menu_item_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info"/>

    <item
        android:id="@+id/menu_item_exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_exit_to_app"/>

    <item
        android:id="@+id/menu_item_result"
        app:showAsAction="always"
        android:title="@string/result"
        android:icon="@drawable/ic_assignment"/>

</menu>